--- a/students/kukuruza_maxim/07_html/index.html
+++ b/students/kukuruza_maxim/07_html/index.html
@@ -1,133 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../07_html/css/style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Denis Novik</title>
 </head>
+
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a class="" href="#">About me</a></li>
-                <li><a class="" href="#">Skills</a></li>
-                <li><a class="" href="#">Portfolio</a></li>
-                <li><a class="" href="#">Contacts</a></li>
+            <ul class="menu clearfix">
+                <li class="menu__item"><a class="menu__link" href="#top">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="#about">About me</a></li>
+                <li class="menu__item"><a class="menu__link" href="#skills">Skills</a></li>
+                <li class="menu__item"><a class="menu__link" href="#portfolio">Portfolio</a></li>
+                <li class="menu__item"><a class="menu__link" href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
-            
             <h1>Denis Novik</h1>
             <img src="./img/hero-image.jpg" alt="hero-image">
         </section>
-        <section class="about-me">
+        <section id="about" class="about-me">
             <div class="content">
-            <h2>About me</h2>
-            <div class="description">
-                <p>Hi, I'm Denis - UX/UI designer from Minsk. 
-                    I'm interested in design and everything connected with it.</p>
-                <p>I'm studying at courses "Web and mobile design 
-                    interfaces" in IT-Academy.</p>
-                <p>Ready to implement excellent projects
-                    with wonderful people.</p>
+                <h2>About me</h2>
+                <div class="description">
+                    <p>Hi, I'm Denis - UX/UI designer from Minsk.
+                        I'm interested in design and everything connected with it.</p>
+                    <p>I'm studying at courses "Web and mobile design
+                        interfaces" in IT-Academy.</p>
+                    <p>Ready to implement excellent projects
+                        with wonderful people.</p>
+                </div>
+
             </div>
-        </div>
         </section>
-        <section class="skills">
+        <section id="skills" class="skills">
             <div class="content">
-                <div class="wrapper">
-                   <h2>Skills</h2>
-                   <p>I work in such programs as</p>
-                </div>
-            <div class="programs">
-                <div class="container">
-                    <img style="width: 90px;" src="./img/PS.svg" alt="Photoshop">
-                    <p>Adobe <br> Photoshop</p>
-                    <div class="stars">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star-G.png" alt="star">
+                <h2>Skills</h2>
+                <p>I work in such programs as</p>
+                <div class="programs">
+                    <div class="container">
+                        <img style="width: 90px;" src="./img/PS.svg" alt="Photoshop">
+                        <p>Adobe <br> Photoshop</p>
+                        <div class="stars">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star-G.png" alt="star">
+                        </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img style="width: 90px;" src="./img/AI.svg" alt="Photoshop">
-                    <p>Adobe <br> Illustrator</p>
-                    <div class="stars">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star-G.png" alt="star">
+                    <div class="container">
+                        <img style="width: 90px;" src="./img/AI.svg" alt="Photoshop">
+                        <p>Adobe <br> Illustrator</p>
+                        <div class="stars">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star-G.png" alt="star">
+                        </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img style="width: 90px;" src="./img/AE.svg" alt="Photoshop">
-                    <p>Adobe <br> After Effects</p>
-                    <div class="stars">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star-G.png" alt="star">
-                        <img src="./img/Star-G.png" alt="star">
+                    <div class="container">
+                        <img style="width: 90px;" src="./img/AE.svg" alt="Photoshop">
+                        <p>Adobe <br> After Effects</p>
+                        <div class="stars">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star-G.png" alt="star">
+                            <img src="./img/Star-G.png" alt="star">
+                        </div>
                     </div>
-                </div>
-                <div class="container">
-                    <img style="width: 58px;" src="./img/Figma.svg" alt="Photoshop">
-                    <p>Figma</p>
-                    <div class="stars">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star.svg" alt="star">
-                        <img src="./img/Star-G.png" alt="star">
+                    <div class="container">
+                        <img style="width: 58px;" src="./img/Figma.svg" alt="Photoshop">
+                        <p>Figma</p>
+                        <div class="stars">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star.svg" alt="star">
+                            <img src="./img/Star-G.png" alt="star">
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
         </section>
-        <section class="portfolio">
+        <section id="portfolio" class="portfolio">
             <div class="content">
-                <h2>Portfolio</h2>
-                <a href="#" target="_blank">
-                <img src="./img/portf1.jpg" alt="portfolio">
-                </a>
-                <a href="#" target="_blank"><p><u>Online fashion store - Homepage</u></p></a>
-            </div>
-            <div class="content">
-                <a href="#" target="_blank">
-                <img src="./img/portf2.jpg" alt="portfolio">
-                </a>
-                <a href="#" target="_blank"><p><u>Reebok Store - Concept</u></p></a>
-            </div>
-            <div class="content">
-                <a href="#" target="_blank">
-                <img src="./img/portf3.jpg" alt="portfolio">
-                </a>
-                <a href="#" target="_blank"><p><u>Braun Landing Page - Concept</u></p></a>
+                <div>
+                    <h2>Portfolio</h2>
+                    <a href="#" target="_blank">
+                        <img src="./img/portf1.jpg" alt="portfolio">
+                    </a>
+                    <a href="#" target="_blank">
+                        <p>Online fashion store - Homepage</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="#" target="_blank">
+                        <img src="./img/portf2.jpg" alt="portfolio">
+                    </a>
+                    <a href="#" target="_blank">
+                        <p>Reebok Store - Concept</p>
+                    </a>
+                </div>
+                <div>
+                    <a href="#" target="_blank">
+                        <img src="./img/portf3.jpg" alt="portfolio">
+                    </a>
+                    <a href="#" target="_blank">
+                        <p>Braun Landing Page - Concept</p>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
     <footer>
-        <div class="content">
-        <h2>Contacts</h2>
-        <p>Want to know more or just chat? <br>
-            You are welcome!</p>
-        <button href="#">Send message</button>
-        <div class="social">
-            <a href="#"><img src="./img/linkedIn.svg" alt="LinkedIn"></a>
-            <a href="#"><img src="./img/inst.svg" alt="Instagram"></a>
-            <a href="#"><img src="./img/Dribble.svg" alt="Dribble"></a>
-            <a href="#"><img src="./img/behance.svg" alt="Behance"></a>
-        </div>
-        <p style=" color: #828282;">Like me on <br>
-            LinkedIn, Instagram, Behance, Dribble</p>
+        <div id="contacts" class="content">
+            <div class="footer-text">
+                <h2>Contacts</h2>
+                <p>Want to know more or just chat? <br>
+                    You are welcome!</p>
+            </div>
+            <div class="footer-links">
+                <button type="button" href="#">Send message</button>
+                <div class="social">
+                    <a href="#"><img src="./img/linkedIn.svg" alt="LinkedIn"></a>
+                    <a href="#"><img src="./img/inst.svg" alt="Instagram"></a>
+                    <a href="#"><img src="./img/Dribble.svg" alt="Dribble"></a>
+                    <a href="#"><img src="./img/behance.svg" alt="Behance"></a>
+                </div>
+                <p style=" color: #828282;">Like me on <br>
+                    LinkedIn, Instagram, Behance, Dribble</p>
+            </div>
         </div>
     </footer>
 </body>
+
 </html>
