added some styles

--- a/students/havrylova_kateryna/11_flexbox/index.html
+++ b/students/havrylova_kateryna/11_flexbox/index.html
@@ -42,8 +42,8 @@
 
         <!-- <div class="right"> -->
         <div class="sign header">
-            <button class="up">Sign Up</button>
             <button class="in">Sign In</button>
+            <button class="up">Sign Up</button>
         </div>
         <!-- </div> -->
 
@@ -52,7 +52,7 @@
 
     <main>
         <section class="section1">
-            <div>
+            <div class="col-2">
                 <div>
                     <h2>
                         The Design Thinking superpowers
@@ -66,7 +66,7 @@
                     </p>
                 </div>
                 <div>
-                    <button>
+                    <button class="up">
                         Get started
                     </button>
                 </div>
