corrected header link

--- a/students/hridina_anastasiia/07_figma/index.html
+++ b/students/hridina_anastasiia/07_figma/index.html
@@ -12,14 +12,13 @@
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#about me">About me</a></li>
+                <li><a href="#aboutme">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
         <section>
             <div>
@@ -30,7 +29,8 @@
         <section>
             <div id="aboutme">
                 <h2>About me</h2>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk.
+                <p>
+                    Hi, I'm Denis – UX/UI designer from Minsk.
                     I'm interested in design and everything connected with it.
 
                     I'm studying at courses "Web and mobile design
@@ -96,29 +96,28 @@
                 <a href="#">Braun Landing Page - Concept</a>
             </div>
         </section>
-        <footer>
-            <div id="contacts">
-                <h2>Contacts</h2>
-                <p>Want to know more or just chat?
-                    You are welcome!</p>
-                <button type="button">Send message</button>
-            </div>
-            <div>
-                <a href="#"><img src="./images/linkedin.svg" alt="LinkedIn"></a>
-                <a href="#"><img src=".//images/instagram.svg" alt="Instagram"></a>
-                <a href="#"><img src="./images/behance.svg" alt="Behance"></a>
-                <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
-            </div>
-            <div>
-                <p>
-                    Like me on
-                    LinkedIn, Instagram, Behance,
-                    Dribble
-                </p>
-            </div>
-        </footer>
-
     </main>
+    <footer>
+        <div id="contacts">
+            <h2>Contacts</h2>
+            <p>Want to know more or just chat?
+                You are welcome!</p>
+            <button type="button">Send message</button>
+        </div>
+        <div>
+            <a href="#"><img src="./images/linkedin.svg" alt="LinkedIn"></a>
+            <a href="#"><img src=".//images/instagram.svg" alt="Instagram"></a>
+            <a href="#"><img src="./images/behance.svg" alt="Behance"></a>
+            <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
+        </div>
+        <div>
+            <p>
+                Like me on
+                LinkedIn, Instagram, Behance,
+                Dribble
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
