--- a/students/hridina_anastasiia/10_boxmodel/productly/index.html
+++ b/students/hridina_anastasiia/10_boxmodel/productly/index.html
@@ -42,19 +42,19 @@
         <div class="block__one">
             <h4>Quick Links</h4>
             <ul class="quick__links">
-                <li>About Us</li>
-                <li>Blog</li>
-                <li>Contact</li>
-                <li>FAQ</li>
+                <li class="block__links"><a href="#">About Us</a></li>
+                <li class="block__links"><a href="#">Blog</a></li>
+                <li class="block__links"><a href="#">Contact</a></li>
+                <li class="block__links"><a href="#">FAQ</a></li>
             </ul>
         </div>
         <div class="block__two">
             <h4>Legal Stuff</h4>
             <ul class="legal__staff">
-                <li>Disclaimer</li>
-                <li>Financing</li>
-                <li>Privacy Policy</li>
-                <li>Terms of Service</li>
+                <li class="block__links"><a href="#">Disclaimer</a></li>
+                <li class="block__links"><a href="#">Financing</a></li>
+                <li class="block__links"><a href="#">Privacy Policy</a></li>
+                <li class="block__links"><a href="#">Terms of Service</a></li>
             </ul>
         </div>
         <div class="buttons">
