--- a/students/motkaliuk_andrii/10_css_box_model/productly/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/productly/index.html
@@ -23,22 +23,18 @@
             </div>
             <nav class="navigation_list">
                 <ul>
-                    <!-- <li><a class="navigation_item" href="#">Product</a></li>
-                    <li><a class="navigation_item" href="#">Customers</a></li>
-                    <li><a class="navigation_item" href="#">Pricing</a></li>
-                    <li><a class="navigation_item" href="#">Product</a></li> -->
-                    <li class="navigation_item">Product</li>
-                    <li class="navigation_item">Customers</li>
-                    <li class="navigation_item">Pricing</li>
-                    <li class="navigation_item">Resources</li>
+                    <li class="navigation_item"><a href="#">Product</a></li>
+                    <li class="navigation_item"><a href="#">Customers</a></li>
+                    <li class="navigation_item"><a href="#">Pricing</a></li>
+                    <li class="navigation_item"><a href="#">Resources</a></li>
                 </ul>
             </nav>
             <div class="sign_in_up">
                 <div class="sign_in">
-                    <button class="sign_in_button">Sign in</button>
+                    <button class="sign_in_button">Sign In</button>
                 </div>
                 <div class="sign_up">
-                    <button class="sign_up_button">Sign up</button>
+                    <button class="sign_up_button">Sign Up</button>
                 </div>
 
             </div>
