second edition according to comments

--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -41,7 +41,7 @@
             color: #828282;
             text-align: center;
             font-size: 14px;
-            font-family: Gilroy-Bold, Arial, Helvetica, sans-serif;
+            font-family: Open Sans, Arial, Helvetica, sans-serif;
             font-weight: 400;
         }
 
@@ -58,39 +58,40 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li style="display: inline-block; margin-right: 40px;"><a href="#">Home</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#about">About me</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#skills">Skills</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#portfolio">Portfolio</a></li>
-            <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li style="display: inline-block; margin-right: 40px;"><a href="#">Home</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#about">About me</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#skills">Skills</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#portfolio">Portfolio</a></li>
+                <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <hr>
 
-    <section>
+    <main>
         <h1>Denis Novik</h1>
         <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
-    </section>
-
-    <main>
-        <h2 id="about">About me</h2>
-        <p>
-            Hi, I'm Denis – UX/UI designer from Minsk.<br>
-            I'm interested in design and everything connected with it.
-        </p>
-        <br>
-        <p>
-            I'm studying at courses "Web and mobile design<br>
-            interfaces" in IT-Academy.
-        </p>
-        <br>
-        <p>
-            Ready to implement excellent projects<br>
-            with wonderful people.
-        </p>
+        <div>
+            <h2 id="about">About me</h2>
+            <p>
+                Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                I'm interested in design and everything connected with it.
+            </p>
+            <br>
+            <p>
+                I'm studying at courses "Web and mobile design<br>
+                interfaces" in IT-Academy.
+            </p>
+            <br>
+            <p>
+                Ready to implement excellent projects<br>
+                with wonderful people.
+            </p>
+        </div>
     </main>
 
     <section>
