--- a/students/motkaliuk_andrii/09_css_selectors/index.html
+++ b/students/motkaliuk_andrii/09_css_selectors/index.html
@@ -16,39 +16,40 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li style="display: inline-block; margin-right: 40px;"><a href="#">Home</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#about">About me</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#skills">Skills</a></li>
-            <li style="display: inline-block; margin-right: 40px"><a href="#portfolio">Portfolio</a></li>
-            <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <ul>
+                <li style="display: inline-block; margin-right: 40px;"><a href="#">Home</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#about">About me</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#skills">Skills</a></li>
+                <li style="display: inline-block; margin-right: 40px"><a href="#portfolio">Portfolio</a></li>
+                <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <hr>
 
-    <section>
+    <main>
         <h1>Denis Novik</h1>
         <img src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
-    </section>
-
-    <main>
-        <h2 id="about">About me</h2>
-        <p>
-            Hi, I'm Denis – UX/UI designer from Minsk.<br>
-            I'm interested in design and everything connected with it.
-        </p>
-        <br>
-        <p>
-            I'm studying at courses "Web and mobile design<br>
-            interfaces" in IT-Academy.
-        </p>
-        <br>
-        <p>
-            Ready to implement excellent projects<br>
-            with wonderful people.
-        </p>
+        <div>
+            <h2 id="about">About me</h2>
+            <p>
+                Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                I'm interested in design and everything connected with it.
+            </p>
+            <br>
+            <p>
+                I'm studying at courses "Web and mobile design<br>
+                interfaces" in IT-Academy.
+            </p>
+            <br>
+            <p>
+                Ready to implement excellent projects<br>
+                with wonderful people.
+            </p>
+        </div>
     </main>
 
     <section>
