--- a/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
+++ b/students/motkaliuk_andrii/10_css_box_model/denis_novik/index.html
@@ -32,28 +32,29 @@
     </header>
 
 
-
-    <section class="hero_block">
-        <h1>Denis Novik</h1>
-        <img class="hero_image" src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
-    </section>
-
     <main>
-        <h2 class="about_me_header">About me</h2>
-        <p class="about_item1">
-            Hi, I'm Denis – UX/UI designer from Minsk.<br>
-            I'm interested in design and everything connected with it.
-        </p>
+        <section class="hero_block">
+            <h1>Denis Novik</h1>
+            <img class="hero_image" src="./images/hero.jpg" width="944" height="387" alt="Denis Novik">
+        </section>
 
-        <p class="about_item2">
-            I'm studying at courses "Web and mobile design<br>
-            interfaces" in IT-Academy.
-        </p>
+        <div class="about_me_container">
+            <h2 class="about_me_header">About me</h2>
+            <p class="about_item1">
+                Hi, I'm Denis – UX/UI designer from Minsk.<br>
+                I'm interested in design and everything connected with it.
+            </p>
 
-        <p class="about_item2">
-            Ready to implement excellent projects<br>
-            with wonderful people.
-        </p>
+            <p class="about_item2">
+                I'm studying at courses "Web and mobile design<br>
+                interfaces" in IT-Academy.
+            </p>
+
+            <p class="about_item2">
+                Ready to implement excellent projects<br>
+                with wonderful people.
+            </p>
+        </div>
     </main>
 
     <section class="skills_block">
@@ -94,7 +95,7 @@
         </div>
         <div class="skills_item2">
             <img class="figma_image" src="./images/figma.svg" width="58" height="88" alt="Figma">
-            <p class="skills_signature">Figma</p>
+            <p class="skills_signature">Figma<br><br></p>
             <div>
                 <img src="./images/Star_full.svg" alt="full star" class="stars">
                 <img src="./images/Star_full.svg" alt="full star" class="stars">
