--- a/students/hridina_anastasiia/11_flexbox/index.html
+++ b/students/hridina_anastasiia/11_flexbox/index.html
@@ -7,6 +7,10 @@
     <title>Productly</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a8b3a79c46.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
