corrected productly footer

--- a/students/hridina_anastasiia/10_boxmodel/productly/index.html
+++ b/students/hridina_anastasiia/10_boxmodel/productly/index.html
@@ -17,8 +17,7 @@
     <header class="header">
         <container class="container">
             <div class="logo__left">
-                <img src="./images/bitmap.png" alt="Bitmap">
-                <img src="./images/productly.svg" alt="Productly">
+                <img src="./images/productly_logo.svg" alt="Productly">
             </div>
             <div class="buttons__right">
                 <a href="#" class="button1">Sign In</a>
@@ -36,8 +35,7 @@
     </header>
     <footer class="footer">
         <div class="footer__logo">
-            <img src="./images/bitmap.png" alt="Bitmap">
-            <img src="./images/productly.svg" alt="Productly">
+            <img src="./images/productly_logo.svg" alt="Productly">
         </div>
         <div class="block__one">
             <h4>Quick Links</h4>
