--- a/students/tiselko_iryna/class_works/11_flex/index.html
+++ b/students/tiselko_iryna/class_works/11_flex/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>shop</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> -->
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -19,18 +23,20 @@
                     </h2>
                     <div class="product__rate rate">
                         <img class="rate__image" src="./images/rate.png" alt="">
-                        <a class="rate__link" href="">147 review</a>
+                        <a class="rate__link" href="">147 review <span class="hover">gdfhgfhgnbgv</span></a>
                     </div>
-                    <div class="product__price price-box">
-                        <p class="price-box__old-price">$2000</p>
-                        <p class="price-box__final-price">$1800</p>
-                    </div>
-                    <div class="product__qty qty">
-                        <label for="qty">Qty</label>
-                        <div class="qty__wrapper">
-                            <button class="qty__btn">-</button>
-                            <input type="number" name="qty" id="qty">
-                            <button class="qty__btn">+</button>
+                    <div class="product__info">
+                        <div class="product__price price-box">
+                            <p class="price-box__old-price">$2000</p>
+                            <p class="price-box__final-price">$1800</p>
+                        </div>
+                        <div class="product__qty qty">
+                            <label class="qty__label" for="qty">Qty</label>
+                            <div class="qty__wrapper">
+                                <button class="qty__btn">-</button>
+                                <input class="qty__input" type="number" name="qty" id="qty">
+                                <button class="qty__btn">+</button>
+                            </div>
                         </div>
                     </div>
                     <ul class="product__label label">
@@ -48,14 +54,14 @@
                         </li>
                     </ul>
                     <div class="product__action">
-                        <button class="bnt-primary" type="button">
-                            Add To Cart
+                        <button class="btn-primary product__btn-primary" type="button">
+                            <span>Add To Cart</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Wishlist
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Wishlist</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Compare
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Compare</span>
                         </button>
                     </div>
                 </div>
@@ -66,47 +72,34 @@
                         <img class="product__image" src="./images/1.jpg" alt="">
                     </div>
                     <h2 class="product__title">
-                        Asus ROG Zephyrus Duo 15 GX550LXS-HC068R
+                        Asus ROG Zephyrus 
                     </h2>
                     <div class="product__rate rate">
                         <img class="rate__image" src="./images/rate.png" alt="">
                         <a class="rate__link" href="">147 review</a>
                     </div>
-                    <div class="product__price price-box">
-                        <p class="price-box__old-price">$2000</p>
-                        <p class="price-box__final-price">$1800</p>
-                    </div>
-                    <div class="product__qty qty">
-                        <label for="qty2">Qty</label>
-                        <div class="qty__wrapper">
-                            <button class="qty__btn">-</button>
-                            <input type="number" name="qty" id="qty2">
-                            <button class="qty__btn">+</button>
+                    <div class="product__info">
+                        <div class="product__price price-box">
+                            <p class="price-box__final-price">$2000</p>
+                        </div>
+                        <div class="product__qty qty">
+                            <label class="qty__label" for="qty2">Qty</label>
+                            <div class="qty__wrapper">
+                                <button class="qty__btn">-</button>
+                                <input class="qty__input" type="number" name="qty" id="qty1">
+                                <button class="qty__btn">+</button>
+                            </div>
                         </div>
                     </div>
-                    <ul class="product__label label">
-                        <li class="label__item">
-                            <img src="./images/mono.png" alt="">
-                        </li>
-                        <li class="label__item">
-                            <img src="./images/p13.png" alt="">
-                        </li>
-                        <li class="label__item">
-                            <img src="./images/187292024.jpg" alt="">
-                        </li>
-                        <li class="label__item">
-                            <img src="./images/345265403.png" alt="">
-                        </li>
-                    </ul>
                     <div class="product__action">
-                        <button class="bnt-primary" type="button">
-                            Add To Cart
+                        <button class="btn-primary product__btn-primary" type="button">
+                            <span>Add To Cart</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Wishlist
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Wishlist</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Compare
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Compare</span>
                         </button>
                     </div>
                 </div>
@@ -117,22 +110,24 @@
                         <img class="product__image" src="./images/1.jpg" alt="">
                     </div>
                     <h2 class="product__title">
-                        Asus ROG Zephyrus Duo 15 GX550LXS-HC068R
+                        Asus ROG Zephyrus Duo 15 GX550LXS-HC068R + Duo 15 GX550LXS-HC068R
                     </h2>
                     <div class="product__rate rate">
                         <img class="rate__image" src="./images/rate.png" alt="">
-                        <a class="rate__link" href="">147 review</a>
+                        <a class="rate__link" href="">147 review <span class="hover">gdfhgfhgnbgv</span></a>
                     </div>
-                    <div class="product__price price-box">
-                        <p class="price-box__old-price">$2000</p>
-                        <p class="price-box__final-price">$1800</p>
-                    </div>
-                    <div class="product__qty qty">
-                        <label for="qty3">Qty</label>
-                        <div class="qty__wrapper">
-                            <button class="qty__btn">-</button>
-                            <input type="number" name="qty" id="qty3">
-                            <button class="qty__btn">+</button>
+                    <div class="product__info">
+                        <div class="product__price price-box">
+                            <p class="price-box__old-price">$2000</p>
+                            <p class="price-box__final-price">$1800</p>
+                        </div>
+                        <div class="product__qty qty">
+                            <label class="qty__label" for="qty">Qty</label>
+                            <div class="qty__wrapper">
+                                <button class="qty__btn">-</button>
+                                <input class="qty__input" type="number" name="qty" id="qty2">
+                                <button class="qty__btn">+</button>
+                            </div>
                         </div>
                     </div>
                     <ul class="product__label label">
@@ -150,14 +145,14 @@
                         </li>
                     </ul>
                     <div class="product__action">
-                        <button class="bnt-primary" type="button">
-                            Add To Cart
+                        <button class="btn-primary product__btn-primary" type="button">
+                            <span>Add To Cart</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Wishlist
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Wishlist</span>
                         </button>
-                        <button class="bnt-secondary" type="button">
-                            Add To Compare
+                        <button class="btn-secondary" type="button">
+                            <span>Add To Compare</span>
                         </button>
                     </div>
                 </div>
