--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/index.html
@@ -39,8 +39,54 @@
 
             </div>
         </header>
-        <img src="./images/des_thinking.svg" alt="logo">
-        <img src="./images//design_prof.svg" alt="logo">
+
+        <main>
+            <div class="design_container">
+                <div class="design_item1">
+                    <h1 class="design_header">The Design Thinking superpowers</h1>
+                    <p class="design_item_content">Tools, tutorials, design and innovation experts, all in one place!
+                        The most intuitive way to imagine your next user
+                        experience.</p>
+
+                    <div class="button_container">
+                        <button class="get_started_button">Get started</button>
+                    </div>
+                </div>
+                <div class="design_item2">
+                    <img src="./images/des_thinking.svg" alt="logo">
+                </div>
+            </div>
+        </main>
+
+        <section>
+            <h2 class="we_design_header">We design tools to unveil<br> your superpowers</h2>
+            <div class="we_design_container">
+                <div class="we_disign_item">
+                    <img src="images/cursor.svg" alt="click picture">
+                    <h3 class="we_design_item_header">First click tests</h3>
+                    <p class="we_design_content">While most people enjoy casino gambling.</p>
+                </div>
+                <div class="we_disign_item">
+                    <img src="images/path.svg" alt="click picture">
+                    <h3 class="we_design_item_header">Design surveys</h3>
+                    <p class="we_design_content">Sports betting, lottery and bingo<br> playing for the fun.</p>
+                </div>
+                <div class="we_disign_item">
+                    <img src="images/like.svg" alt="click picture">
+                    <h3 class="we_design_item_header">Preference tests</h3>
+                    <p class="we_design_content">The Myspace page defines the<br> individual.</p>
+                </div>
+                <div class="we_disign_item">
+                    <img src="images/time.svg" alt="click picture">
+                    <h3 class="we_design_item_header">Five second tests</h3>
+                    <p class="we_design_content">Personal choices and the overall<br> personality of the person.</p>
+                </div>
+                <div class="we_disign_button_container">
+                    <button class="get_started_button">Sign up Now</button>
+                </div>
+            </div>
+        </section>
+
 
 
         <footer>
