--- a/students/havrylova_kateryna/11_flexbox/index.html
+++ b/students/havrylova_kateryna/11_flexbox/index.html
@@ -4,31 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
     <title>Productly</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+
 
 </head>
 
-<body>
-    <header class="menu__container">
-        <div class="logo header">
-            <div class="img__logo">
-                <img src="./images/bitmap.png" alt="">
+<body class="container body_container">
+    <header class="header">
+        <nav class="head">
+            <div class="head__logo logo">
+                <img class="logo" src="./images/bitmap.png" alt="">
+                <img class="logo" src="./images/productly.svg" alt="">
             </div>
-            <div class="img__logo">
-                <img src="./images/productly.svg" alt="">
-            </div>
-
-        </div>
-
-        <nav class="nav header">
-            <ul class="menu">
+            <ul class="head__menu menu">
                 <li class="menu__item">
                     <a class="first-menu" href="#product" class="menu__link">
                         Product
                     </a>
                 </li>
-                <li class="menu__item active">
+                <li class="menu__item">
                     <a href="#customers">Customers</a>
                 </li>
                 <li class="menu__item">
@@ -38,86 +36,158 @@
                     <a href="#resources">Resources</a>
                 </li>
             </ul>
+            <div class="head__btn">
+                <button class="in">
+                    Sign In
+                </button>
+                <button class="up">
+                    Sign Up
+                </button>
+            </div>
         </nav>
-
-        <!-- <div class="right"> -->
-        <div class="sign header">
-            <button class="in">Sign In</button>
-            <button class="up">Sign Up</button>
-        </div>
-        <!-- </div> -->
-
-
     </header>
 
     <main>
         <section class="section1">
-            <div class="col-2">
-                <div>
-                    <h2>
+            <div class="col-6">
+                <div class="section1__text">
+                    <h2 class="section1__text-title">
                         The Design Thinking superpowers
                     </h2>
-                </div>
-                <div>
-                    <p>
+
+                    <p class="section1__tex-main">
                         Tools, tutorials, design and innovation experts, all in one place! The most intuitive way to
                         imagine
                         your next user experience.
                     </p>
-                </div>
-                <div>
-                    <button class="up">
+
+                    <button class="button-large">
                         Get started
                     </button>
                 </div>
             </div>
-            <div>
-                <div>
-                    <img src="./images/people.svg" alt="">
+            <div class="col-6">
+                <img class="contetn__img" src="./images/people.svg" alt="">
+            </div>
+        </section>
+
+        <section class="section2">
+            <h1 class="secton2__title">
+                We design tools to unveil <br> your superpowers
+            </h1>
+
+            <div class="section2__content">
+                <div class="col-3">
+                    <div class="section2__block">
+                        <img src="./images/icon1.svg" alt="">
+                        <h4 class="section2__block-title">
+                            First click tests
+                        </h4>
+                        <p class="section2__bloc-text">
+                            While most people enjoy casino gambling,
+                        </p>
+                    </div>
                 </div>
+                <div class="col-3">
+                    <div class="section2__block">
+                        <img src="./images/icon2.svg" alt="">
+                        <h4 class="section2__block-title">
+                            Design surveys
+                        </h4>
+                        <p class="section2__bloc-text">
+                            Sports betting, lottery and bingo playing for the fun </p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="section2__block">
+                        <img src="./images/icon3.svg" alt="">
+                        <h4 class="section2__block-title">
+                            Preference tests </h4>
+                        <p class="section2__bloc-text">
+                            The Myspace page defines the individual. </p>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="section2__block">
+                        <img src="./images/icon4.svg" alt="">
+                        <h4 class="section2__block-title">
+                            Five second tests </h4>
+                        <p class="section2__bloc-text">
+                            Personal choices and the overall personality of the person. </p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="section2__content-btn">
+                <button class="button-large">
+                    Sign up Now
+                </button>
             </div>
 
         </section>
     </main>
     <footer class="footer">
-        <div class="logo footer__item">
-            <div class="img__logo">
-                <img src="./images/bitmap.png" alt="">
-            </div>
-            <div class="img__logo">
-                <img src="./images/productly.svg" alt="">
+        <div class="col-3">
+            <div class="footer__logo logo">
+                <img class="logo" src="./images/bitmap.png" alt="">
+                <img class="logo" src="./images/productly.svg" alt="">
             </div>
         </div>
-        <div class="footer__item">
-            <ul class="links">
+
+        <div class="col-3">
+            <ul class="footer__links">
                 <li class="links__item">
-                    <h3 class="footer_title">
+                    <h3 class="links_title">
                         Quick Links
                     </h3>
                 </li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
+                <li class="links__item">
+                    About Us
+                </li>
+                <li class="links__item">
+                    Blog
+                </li>
+                <li class="links__item">
+                    Contact
+                </li>
+                <li class="links__item">
+                    FAQ
+                </li>
             </ul>
         </div>
-        <div class="footer__item">
-            <ul class="links">
+
+        <div class="col-3">
+            <ul class="footer__links">
                 <li class="links__item">
-                    <h3 class="footer_title">
+                    <h3 class="links_title">
                         Legal Stuff
                     </h3>
                 </li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
-                <li class="links__item"></li>
+                <li class="links__item">
+                    Disclaimer
+                </li>
+                <li class="links__item">
+                    Financing
+                </li>
+                <li class="links__item">
+                    Privacy Policy
+                </li>
+                <li class="links__item">
+                    Terms of Service
+                </li>
             </ul>
         </div>
-        <div class="footer__item">
-            <h3 class="footer_title">
+
+        <div class="col-3">
+            <h3 class="links_title">
                 Knowing you're always on the best energy deal.
             </h3>
+            <input class="form" type="text" value="Enter your phone Number">
+            <div class="footer-btn">
+                <button class="button-large">
+                    Sign up Now
+                </button>
+            </div>
         </div>
     </footer>
 
