edit productly and novik

--- a/students/linov_mykhailo/10_box-model/productly/index.html
+++ b/students/linov_mykhailo/10_box-model/productly/index.html
@@ -12,11 +12,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <div class="logo__image icon">
-                    <img src="images/jpg/Bitmap.jpg" alt="productly icon">
-                </div>
                 <div class="logo__image">
-                    <img src="images/svg/Productly.svg" alt="productly logo">
+                    <img src="images/jpg/Logo.jpg" alt="productly logo">
                 </div>
             </div>
             <nav class="alink">
@@ -28,34 +25,36 @@
                 </ul>
             </nav>
             <div class="header_buttons">
-                <button class="sign_in">Sign In</button>
-                <button class="sign_up">Sign Up</button>
+                <div class="signbutton">
+                    <button class="sign_in">Sign In</button>
+                </div>
+                <div class="signbutton">
+                    <button class="sign_up">Sign Up</button>
+                </div>
             </div>
         </div>
     </header>
+    <main>
+        <div class="main"></div>
+    </main>
     <footer>
         <div class="footcont">
-            <div class="col-4">
+            <div class="footone">
                 <div class="logo__image">
-                    <img src="images/jpg/Bitmap.jpg" alt="productly icon">
-                </div>
-                <div class="logo__image">
-                    <img src="images/svg/Productly.svg" alt="productly logo">
+                    <img src="images/jpg/Logo.jpg" alt="productly logo">
                 </div>
             </div>
-            <div class="col-4">
+            <div class="foottwo">
                 <h3>Quick Links</h3>
-                <br>
-                <ul>
+                <ul class="quicklinks__list">
                     <li><a href="">About Us</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="">FAQ</a></li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="foottwo">
                 <h3>Legal Stuff</h3>
-                <br>
                 <ul class="footer-nav">
                     <li><a href="">Disclaimer</a></li>
                     <li><a href="">Financing</a></li>
@@ -63,9 +62,8 @@
                     <li><a href="">Terms of Service</a></li>
                 </ul>
             </div>
-            <div class="col-4">
+            <div class="footthree">
                 <h3>Knowing you're always on the best energy deal.</h3>
-                <br>
                 <input class="phonenum" type="tel" id="phone" name="phone" placeholder="Enter your phone Number">
                 <button class="sign_up_now">Sign up Now</button>
             </div>
