--- a/students/linov_mykhailo/10_box-model/novik/index.html
+++ b/students/linov_mykhailo/10_box-model/novik/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Denis Novik</title>
 </head>
@@ -27,85 +30,104 @@
     </header>
 
     <main>
-        <section>
-            <h1>Denis Novik</h1>
-            <div class="novik"></div>
+        <section id="novik">
+            <div class="h1">
+                <h1>Denis Novik</h1>
+            </div>
+            <div class="novik__photo"></div>
         </section>
         <section id="about_me" class="greyback">
             <h2>About me</h2>
-            <p>Hi, I'm Denis - UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
-            <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
-            <p>Ready to implement excellent projects with wonderful people.</p>
+            <br>
+            <div class="about__me__text">
+                <p>Hi, I'm Denis - UX/UI designer from Minsk.</p>
+                <p>I'm interested in design and everything connected with it.</p>
+                <br><br>
+                <p>I'm studying at courses "Web and mobile design</p>
+                <p>interfaces" in IT-Academy.</p>
+                <br><br>
+                <p>Ready to implement excellent projects</p>
+                <p>with wonderful people.</p>
+            </div>
         </section>
         <section id="skills">
-            <h2>Skills
-            </h2>
+            <h2>Skills</h2>
+            <br>
             <p>I work in such programs as</p>
-            <div>
-                <img src="images/svg/ps.svg" alt="Adobe Photoshop" title="Adobe Photoshop" height="87px" width="89px" />
-                <p class="skill">Adobe Photoshop</p>
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" height="26px" />
-            </div>
-            <div>
-                <img src="images/svg/ai.svg" alt="Adobe Illustrator" title="Adobe Illustrator" height="87px"
-                    width="89px" />
-                <p class="skill">Adobe Illustrator</p>
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" height="26px" />
-                <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" height="26px" />
-            </div>
-            <div>
-                <img src="images/svg/ae.svg" alt="Adobe After Effects" title="Adobe After Effects" height="87px"
-                    width="89px" />
-                <p class="skill">Adobe After Effects
-                </p>
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" height="26px" />
-            </div>
-            <div>
-                <img src="images/svg/figma.svg" alt="Figma" title="Figma" height="87px" width="89px" />
-                <p class="skill">Figma</p>
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star.svg" alt="black star" title="black star" height="26px" />
-                <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" height="26px" />
+            <div class="box">
+                <div class="skills__box">
+                    <img src="images/svg/ps.svg" alt="Adobe Photoshop" title="Adobe Photoshop" />
+                    <p class="skill">Adobe<br>Photoshop</p>
+                    <div class="skills__stars">
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" class="last-star" />
+                    </div>
+                </div>
+                <div class="skills__box">
+                    <img src="images/svg/ai.svg" alt="Adobe Illustrator" title="Adobe Illustrator" />
+                    <p class="skill">Adobe<br>Illustrator</p>
+                    <div class="skills__stars">
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" class="star" />
+                        <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" class="last-star" />
+                    </div>
+                </div>
+                <div class="skills__box">
+                    <img src="images/svg/ae.svg" alt="Adobe After Effects" title="Adobe After Effects" />
+                    <p class="skill">Adobe<br>After Effects</p>
+                    <div class="skills__stars">
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" class="last-star" />
+                    </div>
+                </div>
+                <div class="skills__box">
+                    <img src="images/svg/figma.svg" alt="Figma" title="Figma" />
+                    <p class="skill"><br>Figma</p>
+                    <div class="skills__stars">
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star.svg" alt="black star" title="black star" class="star" />
+                        <img src="images/svg/star_grey.svg" alt="grey star" title="grey star" class="last-star" />
+                    </div>
+                </div>
             </div>
         </section>
         <section id="portfolio" class="greyback">
             <h2>Portfolio</h2>
             <div>
                 <a href="" target="_blank"><img src="images/jpg/store.jpeg" alt="Online fashion store - Homepage"
-                        title="Online fashion store - Homepage" height="510px" width="936px"></a>
-                <br><a href="" target="_blank" class="black">Online fashion store - Homepage</a>
+                        title="Online fashion store - Homepage" class="portfolio__image"></a>
+                <br><a href="" target="_blank" class="black">Online fashion store - <br>Homepage</a>
             </div>
             <div>
                 <a href="" target="_blank"><img src="images/jpg/reebok.jpeg" alt="Reebok Store - Concept"
-                        title="Reebok Store - Concept" height="510px" width="936px"></a>
+                        title="Reebok Store - Concept" class="portfolio__image_two"></a>
                 <br><a href="" target="_blank" class="black">Reebok Store - Concept</a>
             </div>
             <div>
                 <a href="" target="_blank"><img src="images/jpg/braun.jpeg" alt="Braun Landing Page - Concept"
-                        title="Braun Landing Page - Concept" height="510px" width="936px"></a>
+                        title="Braun Landing Page - Concept" class="portfolio__image_two"></a>
                 <br><a href="" target="_blank" class="black">Braun Landing Page - Concept</a>
             </div>
         </section>
     </main>
 
     <footer id="contacts">
-        <h2>Contacts</h2>
-        <p>Want to know more or just chat? You are welcome!</p>
-        <button>Send message</button>
-        <ul>
+        <h2 class="contacts__h2">Contacts</h2>
+        <p>Want to know more or just chat?<br>You are welcome!</p>
+        <div class="contacts__button">
+            <button>Send message</button>
+        </div>
+        <ul class="contacts__icons">
             <li><a href="" target="_blank"><img src="images/svg/linkedin.svg" alt="linkedin" height="40px"
                         width="40px"></a></li>
             <li><a href="" target="_blank"><img src="images/svg/instagram.svg" alt="instagram" height="40px"
@@ -117,10 +139,10 @@
                         width="40px"></a>
             </li>
         </ul>
-        <p class="contact">Like me on <a href="" target="_blank" class="contact">LinkedIn</a>,
+        <p class="contact">Like me on <br> <a href="" target="_blank" class="contact">LinkedIn</a>,
             <a href="" target="_blank" class="contact">Instagram</a>,
-            <a href="" target="_blank" class="contact">Behance</a>,
-            <a href="" target="_blank" class="contact">Dribble</a>
+            <a href="" target="_blank" class="contact">Behance</a>,<br><a href="" target="_blank"
+                class="contact">Dribble</a>
         </p>
     </footer>
 </body>
