--- a/students/lebiedieva_nataliia/index.html
+++ b/students/lebiedieva_nataliia/index.html
@@ -4,12 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Nataliia</title>
 </head>
 
 <body>
     <h1>My branch</h1>
-
 </body>
 
 </html>
