corrected background image + padding, added fonts and containers

--- a/students/hridina_anastasiia/11_flexbox/index.html
+++ b/students/hridina_anastasiia/11_flexbox/index.html
@@ -6,21 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productly</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/a8b3a79c46.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
         }
     </style>
 </head>
 
 <body>
     <header class="header">
-        <container class="container">
+        <container class="container menu">
             <div class="logo__left">
                 <img src="./images/productly_logo.svg" alt="Productly">
             </div>
@@ -40,46 +38,51 @@
     </header>
     <main>
         <section class="section__start">
-            <div class="desing__text">
-                <h1>The Design Thinking <br> superpowers</h1>
-                <p>Tools, tutorials, design and innovation experts, all in one <br> place! The most intuitive way to
-                    imagine
-                    your next user<br>experience.
-                </p>
-                <div class="start__button">
-                    <a class="button3" type="button" href="#">Get started</a>
+            <div class="container start">
+                <div class="desing__text">
+                    <h1>The Design Thinking <br> superpowers</h1>
+                    <p>Tools, tutorials, design and innovation experts, all in one <br> place! The most intuitive way to
+                        imagine
+                        your next user<br>experience.
+                    </p>
+                    <div class="start__button">
+                        <a class="button3" type="button" href="#">Get started</a>
+                    </div>
+                </div>
+                <div class="design__images">
+                    <img src="./images/image.png" alt="">
                 </div>
             </div>
-            <div class="design__images">
-                <img src="./images/image.png" alt="">
-            </div>
+
         </section>
         <section class="section__tools">
-            <h2>We design tools to unveil <br> your superpowers</h2>
-            <ul class="tests">
-                <li class="test__link purple">
-                    <img src="./images/purple_icon.png" alt="Purple icon">
-                    <h4>First click tests</h4>
-                    <p>While most people enjoy casino gambling.</p>
-                </li>
-                <li class="test__link orange">
-                    <img src="./images/orange_icon.png" alt="Orange icon">
-                    <h4>Design surveys</h4>
-                    <p>Sports betting, lottery and bingo playing for the fun.</p>
-                </li>
-                <li class="test__link red">
-                    <img src="./images/red_icon.svg" alt="Red icon">
-                    <h4>Preference tests</h4>
-                    <p>The Myspace page defines the individual.</p>
-                </li>
-                <li class="test__link blue">
-                    <img src="./images/blue_icon.png" alt="Blue icon">
-                    <h4>Five second tests</h4>
-                    <p>Personal choices and the overall personality of the person.</p>
-                </li>
-            </ul>
-            <div class="design__button">
-                <a class="button4" type="button" href="#">Sing up Now</a>
+            <div class="container tools">
+                <h2>We design tools to unveil <br> your superpowers</h2>
+                <ul class="tests">
+                    <li class="test__link purple">
+                        <img src="./images/purple_icon.png" alt="Purple icon">
+                        <h4>First click tests</h4>
+                        <p>While most people enjoy casino gambling.</p>
+                    </li>
+                    <li class="test__link orange">
+                        <img src="./images/orange_icon.png" alt="Orange icon">
+                        <h4>Design surveys</h4>
+                        <p>Sports betting, lottery and bingo playing for the fun.</p>
+                    </li>
+                    <li class="test__link red">
+                        <img src="./images/red_icon.svg" alt="Red icon">
+                        <h4>Preference tests</h4>
+                        <p>The Myspace page defines the individual.</p>
+                    </li>
+                    <li class="test__link blue">
+                        <img src="./images/blue_icon.png" alt="Blue icon">
+                        <h4>Five second tests</h4>
+                        <p>Personal choices and the overall personality of the person.</p>
+                    </li>
+                </ul>
+                <div class="design__button">
+                    <a class="button4" type="button" href="#">Sing up Now</a>
+                </div>
             </div>
         </section>
     </main>
