--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -7,33 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
     <style>
-        p {
+        body {
+            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             color: #070707;
+        }
+
+        p {
             text-align: center;
             font-size: 18px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
         h1 {
-            color: #070707;
             font-size: 48px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
         }
 
         h2 {
-            color: #070707;
             text-align: center;
             font-size: 34px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
         }
 
         nav {
             color: #828282;
             font-size: 18px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
@@ -41,7 +39,6 @@
             color: #828282;
             text-align: center;
             font-size: 14px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 400;
         }
 
@@ -49,7 +46,6 @@
             color: #FFF;
             text-align: center;
             font-size: 18px;
-            font-family: 'Open Sans, Arial, Helvetica, sans-serif';
             font-weight: 700;
             letter-spacing: 1.8px;
         }
@@ -68,8 +64,8 @@
                 <li style="display: inline-block"><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
+        <hr>
     </header>
-    <hr>
     <main>
         <h1>Denis Novik</h1>
         <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
@@ -82,8 +78,6 @@
             <br>
             <p>Ready to implement excellent projects<br>with wonderful people.</p>
         </div>
-
-
         <section>
             <h2 id="skills">Skills</h2>
             <p>I work in such programs as</p>
@@ -173,8 +167,7 @@
                 </li>
             </ul>
         </div>
-        <p
-            style="color: #828282; text-align: center; font-size: 14px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 400;">
+        <p style="color: #828282; text-align: center; font-size: 14px; font-weight: 400;">
             Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
